--- a/sign-in.html
+++ b/sign-in.html
@@ -201,7 +201,7 @@
 
       if (selectedRole === "admin") {
         emailInput.value = "nafi@example.com";
-        passwordInput.value = "password123";
+        passwordInput.value = "123456na";
       } else if (selectedRole === "order-manager") {
         emailInput.value = "mafi262912@gmail.com";
         passwordInput.value = "123456na";
